--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,5 +20,8 @@
   <%= @product.summery %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
+<% if current_user.admin_flag? %>
+  <%= link_to 'Edit', edit_product_path(@product) %> |
+<% end %>
+
 <%= link_to 'Back', products_path %>
