--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,6 +5,36 @@
   <%= f.search_field :name_or_price_or_summery_cont %>
 <% end %>
 
+<h2>Ranking</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Price</th>
+      <th>Image</th>
+      <th>Summery</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @ranking.each do |rank| %>
+      <tr>
+        <td><%= rank.name %></td>
+        <td><%= rank.price %></td>
+        <td>
+          <% if rank.image? %>
+            <%= image_tag rank.image.url %>
+          <% else %>
+            <%= image_tag "/noimage.png" %>
+          <% end %>
+        </td>
+        <td><%= rank.summery %></td>
+        <td><%= link_to 'Show', rank %></td>
+      </tr>
+    <% end %>
+</table>
+
 <h1>Products</h1>
 
 <table>
