ランキング　合計 売上金額で表示

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,19 +10,15 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>No</th>
       <th>Price</th>
-      <th>Image</th>
-      <th>Summery</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
     <% @ranking.each do |product| %>
       <tr>
-        <td><%= product.product_id %></td>
-        <td><%= product.total_price %></td>
-        
+        <td><%= product[0] %></td>
+        <td><%= product[1] %></td>
       </tr>
     <% end %>
   </tbody>
