--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,24 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <%= search_form_for @q do |f| %>
-  <%= f.label :name_or_price_or_summery_cont %>
-  <%= f.search_field :name_or_price_or_summery_cont %>
+  <%= f.label :name_or_summery_cont %>
+  <%= f.search_field :name_or_summery_cont %>
 <% end %>
 
-<h2>Ranking</h2>
+<h2>ランキング</h2>
 
 <table>
   <thead>
     <tr>
-      <th>No</th>
-      <th>Price</th>
+      <th>商品ID</th>
+      <th>合計売上額</th>
     </tr>
   </thead>
   <tbody>
     <% @ranking.first(3).each { |key, value| %>
       <tr>
         <td><%= key %></td>
-        <td><%= value %></td>
+        <td><%= value %>円</td>
       </tr>
     <% } %>
   </tbody>
@@ -29,10 +29,11 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Image</th>
-      <th>Summery</th>
+      <th>商品ID</th>
+      <th>商品名</th>
+      <th>価格</th>
+      <th>イメージ</th>
+      <th>内容</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -40,8 +41,9 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
+        <td><%= product.id %></td>
         <td><%= product.name %></td>
-        <td><%= product.price %></td>
+        <td><%= product.price %>円</td>
         <td>
           <% if product.image? %>
             <%= image_tag product.image.url %>
