注文：合計金額に変更（product.price → order.total_price）

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,12 +24,14 @@
   <%= @product.summery %>
 </p>
 
-
-<%= form_tag(purchase_product_path, method: :post) do %>
+<%= form_with model: @order do |f| %>
   <p>
     <strong>注文数:</strong>
-    <%= @order.count %>個
+    <%= f.select :count, [[1, 1], [2, 2], [3, 3], [4, 4], [5, 5], [6, 6], [7, 7], [8, 8], [9, 9]] %>個
   </p>
+<% end %>
+
+<%= form_tag(purchase_product_path, method: :post) do %>
   <%= submit_tag "購入する" %>
 <% end %>
 
