--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 
     <header>
       <nav>
+        <%= link_to '商品一覧', products_path %>
         <% if user_signed_in? %>
           <strong><%= link_to current_user.username, pages_show_path %></strong>
           <%= link_to 'プロフィール変更', edit_user_registration_path %>
