--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <%= search_form_for @q do |f| %>
   <%= f.label :name_or_summery_cont %>
   <%= f.search_field :name_or_summery_cont %>
@@ -11,64 +9,28 @@
 
 <h2>ランキング</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>商品ID</th>
-      <th>合計売上額</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @ranking.first(3).each { |key, value| %>
-      <tr>
-        <td><%= key %></td><!-- 商品ID -->
-        <td><%= value %>円</td><!-- 合計売上額 -->
-      </tr>
-    <% } %>
-  </tbody>
-</table>
-
-<h1>Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>商品ID</th>
-      <th>商品名</th>
-      <th>価格</th>
-      <th>イメージ</th>
-      <th>内容</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.id %></td>
-        <td><%= product.name %></td>
-        <td><%= product.price %>円</td>
-        <td>
-          <% if product.image? %>
-            <%= image_tag product.image.url %>
-          <% else %>
-            <%= image_tag "/noimage.png" %>
-          <% end %>
-        </td>
-        <td><%= product.summery %></td>
-        <td><%= link_to 'Show', product %></td>
-
+<div class="row">
+  <% @products.each do |product| %>
+    <div class="card col-md-4 col-sm-12">
+      <% if product.image? %>
+        <%= image_tag product.image.url, class: "card-img-top" %>
+      <% else %>
+        <%= image_tag "/noimage.png", class: "card-img-top" %>
+      <% end %>
+      <div class="card-body">
+        <h4 class="card-title"><%= product.name %></h4>
+        <p class="card-text"><%= product.summery %></p>
+        <%= link_to '詳細を見る', product, class: "btn btn-primary" %>
         <% if current_user.admin_flag? %>
-          <td><%= link_to 'Edit', edit_product_path(product) %></td>
-          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <%= link_to '編集', edit_product_path(product), class: "btn btn-info" %>
+          <%= link_to '削除', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
         <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      </div>
+    </div>
+  <% end %>
 
-<br>
+</div>
 
 <% if current_user.admin_flag? %>
-  <%= link_to 'New Product', new_product_path %>
+  <%= link_to 'New Product', new_product_path, class: "btn btn-primary" %>
 <% end %>
