--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,31 +1,23 @@
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <% if @product.image? %>
-    <%= image_tag @product.image.url %>
-  <% else %>
-    <%= image_tag "/noimage.png" %>
-  <% end %>
-</p>
-
-<p>
-  <strong>Summery:</strong>
-  <%= @product.summery %>
-</p>
-
+<div class="row row-cols-1 row-cols-md-2">
+  <div class="col">
+    <div class="card">
+      <% if @product.image? %>
+        <%= image_tag @product.image.url, class: "card-img-top" %>
+      <% else %>
+        <%= image_tag "/noimage.png", class: "card-img-top" %>
+      <% end %>
+      <div class="card-body">
+        <h4 class="card-title"><%= @product.name %></h4>
+        <p class="card-text"><%= @product.price %>円</p>
+        <p class="card-text"><%= @product.summery %></p>
 <%= form_tag(purchase_product_path, method: :post) do %>
   <%= number_field_tag 'count', '1', min: 1, max: 9 %>
   <%= submit_tag "購入する" %>
 <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
 <% if current_user.admin_flag? %>
   <%= link_to 'Edit', edit_product_path(@product) %> |
