--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <header>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container-fluid">
           <button
             class="navbar-toggler"
@@ -29,24 +29,24 @@
           <div class="collapse navbar-collapse" id="navbarExample01">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item active">
-                <%= link_to '商品一覧', products_path, class: "nav-link" %>
+                <%= link_to '商品一覧', products_path, class: "nav-link text-white" %>
               </li>
               <% if user_signed_in? %>
                 <li class="nav-item">
-                  <%= link_to current_user.username, pages_show_path, class: "nav-link" %>
+                  <%= link_to current_user.username, pages_show_path, class: "nav-link text-white" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'プロフィール変更', edit_user_registration_path, class: "nav-link" %>
+                  <%= link_to 'プロフィール変更', edit_user_registration_path, class: "nav-link text-white" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link" %>
+                  <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link text-white" %>
                 </li>
               <% else %>
                 <li class="nav-item">
-                  <%= link_to 'サインアップ', new_user_registration_path, class: "nav-link" %>
+                  <%= link_to 'サインアップ', new_user_registration_path, class: "nav-link text-white" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'ログイン', new_user_session_path, class: "nav-link" %>
+                  <%= link_to 'ログイン', new_user_session_path, class: "nav-link text-white" %>
                 </li>
               <% end %>
             </ul>
@@ -55,6 +55,8 @@
       </nav>
       <!-- Navbar -->
     </header>
+
+
 
     <div class="container">
       <% flash.each do |name, msg| %>
