--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Product</h1>
-
-<%= render 'form', product: @product %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<div class="col-md-6 offset-md-3 pt-4">
+  <h1>商品編集</h1>
+  <%= render 'form', product: @product %>
+  <%= link_to '詳細を見る', @product %> |
+  <%= link_to '戻る', products_path %>
+</div>
