--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Product</h1>
-
-<%= render 'form', product: @product %>
-
-<%= link_to 'Back', products_path %>
+<div class="col-md-6 offset-md-3 pt-4">
+  <h1>新商品登録</h1>
+  <%= render 'form', product: @product %>
+  <%= link_to '戻る', products_path %>
+</div>
