--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
-<div class="row row-cols-1 row-cols-md-2">
-  <div class="col">
-    <div class="card">
+<div class="row row-cols-1 row-cols-md-2 pt-4">
+  <div class="col offset-md-3">
+    <div class="card mb-2">
       <% if @product.image? %>
         <%= image_tag @product.image.url, class: "card-img-top" %>
       <% else %>
@@ -16,11 +16,11 @@
 <% end %>
       </div>
     </div>
+    <% if current_user.admin_flag? %>
+      <%= link_to '編集する', edit_product_path(@product) %> |
+    <% end %>
+    <%= link_to '戻る', products_path %>
   </div>
 </div>
 
-<% if current_user.admin_flag? %>
-  <%= link_to 'Edit', edit_product_path(@product) %> |
-<% end %>
 
-<%= link_to 'Back', products_path %>
