--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3 pt-4">
+<div class="col-md-6 offset-md-3">
   <h1>新商品登録</h1>
   <%= render 'form', product: @product %>
   <%= link_to '戻る', products_path %>
