--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,2 +1,4 @@
-<h1><%= current_user.username %>さん</h1>
-<p>ユーザー用ページです。</p>
+<div class="col-md-6 offset-md-3">
+  <h1><%= current_user.username %>さん</h1>
+  <p>ユーザー用ページです。</p>
+</div>
