--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3 pt-4">
+<div class="col-md-6 offset-md-3">
   <h1>商品編集</h1>
   <%= render 'form', product: @product %>
   <%= link_to '詳細を見る', @product %> |
